force-app/main/default/objects/Round__c/Round__c.object-meta.xml
<CustomObject>
    <label>Round</label>
    <nameField>
        <label>Round Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rounds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>