force-app/main/default/objects/Round__c/fields/Option__c.field-meta.xml
<CustomField>
    <fullName>Option__c</fullName>
    <label>Option</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rock</fullName>
            </value>
            <value>
                <fullName>Paper</fullName>
            </value>
            <value>
                <fullName>Scissors</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>