force-app/main/default/objects/Round__c/fields/Winner__c.field-meta.xml
<CustomField>
    <fullName>Winner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Winner</label>
    <type>Checkbox</type>
</CustomField>